--- a/SHABLON.html
+++ b/SHABLON.html
@@ -10,7 +10,9 @@
 <body>
   <div class="container">
           <header>
-        <img src="logo.png">
+        <div class="logo">
+          <img src="logo.png">
+        </div>
         <nav class="topmenu">
           <ul>
             <li>Головна</li>
