Edited SHABLON + added css (flex)

--- a/SHABLON.html
+++ b/SHABLON.html
@@ -15,18 +15,19 @@
         </div>
         <nav class="topmenu">
           <ul>
-            <li>Головна</li>
-            <li>Про Івано-Франківськ</li>
-            <li>Варто побачити</li>
-            <li>Де зупинитися</li>
-            <li>Де поїсти</li>
-            <li>Новини</li>
-            <li>Контакти</li>
+            <li><a href="">Головна</a></li>
+            <li><a href="">Про Івано-Франківськ</a></li>
+            <li><a href="">Варто побачити</a></li>
+            <li><a href="">Де зупинитися</a></li>
+            <li><a href="">Де поїсти</a></li>
+            <li><a href="">Новини</a></li>
+            <li><a href="">Контакти</a></li>
           </ul>
         </nav>
       </header>
     </div>
     <main>
+    <section class="top4">
       <article>
         <h2>
 		<a href="#">Про Івано-Франківськ</a>
@@ -47,10 +48,11 @@
 		<a href="#">Де поїсти</a>
 		</h2>
       </article>
-
+  </section>
+  
       <section class="topnews">
-      	<h2>Новини</h2>
-      	<div class="mainnews">Новина 1</div>
+      <h2>Новини</h2>
+      		<div class="mainnews">Новина 1</div>
       	<div class="mainnews">Новина 2</div>
       	<div class="mainnews">Новина 3</div>
       	<div class="mainnews">Новина 4</div>
