new name of main file

--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -47,4 +48,55 @@
 </div>
 
 </body>
+=======
+<!DOCTYPE html>
+<html>
+<head>
+ <meta charset="UTF-8" />
+	<script type="text/javascript" src="jquery-1.12.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="StyleSheet.css">
+</head>
+<body>
+<!--
+<div id="test" onclick="$('#test').hide();">block</div>
+<main>
+<h2>Hello</h2>
+<p>●  Назва компанії: ООО «Недра» Росія
+Посада: геолог
+Період роботи: 04.2011-01.2015
+Обов’язки:
+- контроль якості проведення ремонту свердловин
+- організація співпраці з замовником і іншими підрядними організація 
+- ведення актів виконаних робіт і узгодження  об’ємів з замовником
+</p>
+<h4 class="toggle">Accordion trigger</h4>
+<p class="accordion">●  Назва компанії: ООО «Недра» Росія
+Посада: геолог
+Період роботи: 04.2011-01.2015
+Обов’язки:
+- контроль якості проведення ремонту свердловин
+- організація співпраці з замовником і іншими підрядними організація 
+- ведення актів виконаних робіт і узгодження  об’ємів з замовником
+</p>
+</main>
+<div class="container">
+	<div class="btn">
+		<a href="#">Learn More</a>
+		<div class="bg"></div>
+	</div>
+</div> -->
+<div class="reveal-wrapper">
+<div class="reveal-content">
+<h1>Hello</h1>	
+</div>
+<div class="reveal-top">
+	<h1>sfdgsfdg</h1>	
+</div>
+	
+</div>
+	
+</div>
+
+</body>
+
 </html>
