Added files via upload
Add icons to footer

--- a/golovna.html
+++ b/golovna.html
@@ -242,10 +242,21 @@
                             ____________________________________________________________________
                         </div>
                         <div class="footer-bottom-left clearfix">
-                            <span>Факитсна aдреса</span>
-                           <span>телефон</span>
-                           <span>електронна адреса</span>
-                           <span>адміністратор сайту</span>
+                            <span>УКРАЇНА <br />
+                            Івано-Франківськ<br />
+                            Нечуя-Левицького, 19
+                            </span>
+                           <span><img  class="mail" src="images/mail.png"> info@tourismcenter.if.ua<br />
+                           <img  class="mail" src="images/mail.png"> 
+                            if.oblpnz@gmail.com<br />
+                           </span>
+                           <span><img src="images/telephone.png"> (0342) 58-21-56<br />
+                           <img src="images/telephone.png">
+                           (0342) 58-34-14<br />
+                           <img src="images/telephone.png">
+                           (0342) 58-45-96<br />
+                           </span>
+                           <span>Івано-Франківський обласний державний центр туризму і краєзнавства учнівської молоді</span>
                         </div>
                     </div>
                     <div class="share-links">
