--- a/INSIDE_PAGE.html
+++ b/INSIDE_PAGE.html
@@ -3,7 +3,7 @@
   <head>
    <link rel="stylesheet" type="text/css" href="mains.css">
    <link rel="stylesheet" type="text/css" href="style3.css">
- 
+   <link rel="stylesheet" type="text/css" href="index.css">
    <meta charset="utf-8"/>
    <title>Ivano-Frankivck for Tourists</title>
   </head>
