--- a/see/index.html
+++ b/see/index.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" type="text/css" href="mains_see.css">
    <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width initial-scale=1.0">
-   <title>Ivano-Frankivck for Tourists</title>
+   <title>Туристичний Івано-Франківськ: що побачити</title>
   </head>
     
   <body>
