--- a/see/index.html
+++ b/see/index.html
@@ -79,7 +79,7 @@
                   
                   <div class="main_see" class="bl">
                       <div class="pageTitle">
-                                         <h1>Архітектура міста</h1>
+                                         <h1>Архітектура </h1>
                       </div>
                       <div class="article-section">
                           <a href="https://uk.wikipedia.org/wiki/Площа_Ринок_(Івано-Франківськ)" target="_self">                                            
