Changes in header in About page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="index.css">
-
+  <link rel="shortcut icon" href="images/icon.ico" />
 
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width initial-scale=1.0" />
