--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
  
-<div class="container">
+<div class="container_site">
     <header>
             <div class="header-container">
             
