--- a/see/index.html
+++ b/see/index.html
@@ -5,6 +5,8 @@
 	  <meta name="viewport" content="width=device-width initial-scale=1.0">
 	  
 	  <link href="css/bootstrap.min.css" rel="stylesheet">
+	  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="shortcut icon" href="images/icon.ico" />
 	  <link rel="stylesheet" href="source/swipebox.css">
       <link rel="stylesheet" type="text/css" href="mains_see.css">
 	  	
