--- a/see/index.html
+++ b/see/index.html
@@ -25,10 +25,10 @@
 					  <div class="memu-conteiner">  
 						  <div class="menu">
 							  <ul class="menu_ul"> 
-								  <li><a href="#about">ПРО ІВАНО-ФРАНКІВСЬК</a></li>
+								  <li><a href="../about/index.html">ПРО ІВАНО-ФРАНКІВСЬК</a></li>
 								  <li><a href="#content">ВАРТО ПОБАЧИТИ</a></li>
-								  <li><a href="#stay">ДЕ ЗУПИНИТИСЬ</a></li>
-								  <li><a href="#eat"></a></li>
+								  <li><a href="../stay/index.html">ДЕ ЗУПИНИТИСЬ</a></li>
+								  <li><a href="../eat/index.html"></a></li>
 								  <li>
 									  <a href="">
 										  <div class="settings">
