--- a/see/index.html
+++ b/see/index.html
@@ -28,7 +28,7 @@
 								  <li><a href="../about/index.html">ПРО ІВАНО-ФРАНКІВСЬК</a></li>
 								  <li><a href="#content">ВАРТО ПОБАЧИТИ</a></li>
 								  <li><a href="../stay/index.html">ДЕ ЗУПИНИТИСЬ</a></li>
-								  <li><a href="../eat/index.html"></a></li>
+								  <li><a href="../eat/index.html">ДЕ ПОЇСТИ</a></li>
 								  <li>
 									  <a href="">
 										  <div class="settings">
