--- a/see/index.html
+++ b/see/index.html
@@ -33,8 +33,7 @@
 									  <a href="">
 										  <div class="settings">
 											  <label for="search">
-												  <input type="text" size="25" name="search">
-												  <input type="submit" name="button" value="Знайти" >
+												  <input type="text" size="25" name="search" value="Пошук">
 											  </label>
 										  </div>
 									  </a>
