--- a/see/index.html
+++ b/see/index.html
@@ -44,7 +44,7 @@
 				  </nav>
 				  
 				  <div class="logo">
-					  <a href="#">
+					  <a href="../index.html">
 						  <img src="image/logo.png">
 					  </a>
 					  <div class="logo_title">
